# raspberry-dashboard

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  config.toml.example  raspberry-dashboard.service
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: clock.rs  config.rs  dailyverse.rs  homeassistant.rs  main.rs  quotes.rs  remote.rs  screen.rs  snapcast.rs  weather.rs  widget.rs
ui/: clock.slint  dailyverse.slint  dashboard.slint  gauge.slint  homeassistant.slint  nowplaying.slint  quotes.slint  weather.slint
