[package]
name = "raspberry-dashboard"
version = "0.1.0"
edition = "2024"

[features]
default = ["backend-default"]
backend-linuxkms-noseat = ["slint/backend-linuxkms-noseat"]
backend-default = ["slint/backend-default"]

[build-dependencies]
slint-build = "1"

[dependencies]
slint = { version = "1", default-features = false, features = ["compat-1-2", "std", "renderer-femtovg"] }
chrono = "0.4"
rand = "0.10"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
snapcast-control = "0.4.0"
tokio = { version = "1", features = ["rt-multi-thread", "net", "time"] }
env_logger = "0.11"
log = "0.4"
toml = "1"
htmlize = { version = "1", features = ["unescape"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
